// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntryFiles should get entry module: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • Readme \\| [API](modules.md)

***

# entry-module

## Index

### Classes

- [ModuleClass](entry-module/classes/ModuleClass.md)
"
`;

exports[`EntryFiles should get entry module: (Output File Strategy "members") (Option Group "2") 1`] = `
"**typedoc-stubs** • API

***

# entry-module

## Index

### Classes

- [ModuleClass](entry-module/classes/ModuleClass.md)
"
`;

exports[`EntryFiles should get readme file: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](readme_.md) \\| [API](modules.md)

***

[typedoc-stubs](README.md) / typedoc-stubs

# MY README

> Some block quote

Some text.

## Readme heading

Some text.
"
`;
